tests/paczka1/fuzzy1/44123655.err
Error in line 21: hWe S99 93,1
Error in line 16: 5wsFXd S900 266,3
Error in line 36: S99 S900 147,31
